--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -64,8 +64,8 @@ Persons can have any number of tags (including 0).
 
 Examples:
 
-* `add John Doe p/98765432 e/johnd@gmail.com a/John street, block 123, #01-01`
-* `add Betsy Crowe pp/1234567 e/betsycrowe@gmail.com pa/Newgate Prison t/criminal t/friend`
+* `add John Doe p/98765432 e/johnd@gmail.com a/block 123, John street, #01-01, 743823`
+* `add Betsy Crowe pp/1234567 e/betsycrowe@gmail.com pa/88, Newgate Prison, #12-323, 321849 t/criminal t/friend`
 
 == Listing all persons : `list`
 
